アドレスバー処理修正

--- a/RtFileExplorer.ViewModel/RtFileExplorer.ViewModel.Wpf.csproj
+++ b/RtFileExplorer.ViewModel/RtFileExplorer.ViewModel.Wpf.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RtFileExplorer.Model\RtFileExplorer.Model.csproj" />
+    <ProjectReference Include="..\Utility.Wpf\Utility.Wpf.csproj" />
     <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
