--- a/RtFileExplorer.Model/RtFileExplorer.Model.csproj
+++ b/RtFileExplorer.Model/RtFileExplorer.Model.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="ReactiveProperty" Version="9.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utility\Utility.csproj" />
+  </ItemGroup>
+
 </Project>
